--- a/Cortes_ProjectR.Rmd
+++ b/Cortes_ProjectR.Rmd
@@ -46,15 +46,23 @@ Step 10: Functional enrichment analysis
   
 **Data**  
 Mouse Data: *GSE97718*  
+- 16 samples  
+- Control diet (n=8) high fat diet (n=8)  
+- Pre and post exercise samples collected from each mouse  
+- RNA isolated from quadricep skeletal muscle  
 - fastq's downloaded from ENA  
 - data preprocessed with RNA-seq STAR pipeline by Lara Ianov  
   
 Human Data: *GSE108643*  
+- 59 samples  
+- Participants divided by BMI: lean ((BMI<25, 18.5- 24.1 kg/m2, n=15) and Ov/Ob (BMI≥25, 25.5- 36.9 kg/m2, n=15)  
+- Pre and post exercise samples collected from each participant  
+- RNA isolated from vastus lateralis muscle biopsies  
 - fastq's downloaded from ENA  
 - data preprocessed with RNA-seq STAR pipeline by Lara Ianov  
   
 **Read in Mouse Data**  
-```{r, copy = TRUE}
+```{r Mouse_ReadIn}
 #Load in raw counts for Mouse pre/post exercise experiment
 mouse_counts <- read.delim("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/mouse210321_fixed_raw_counts.txt", header = TRUE, row.names = 1, sep = "\t", stringsAsFactors = FALSE)
 mouse_counts <- mouse_counts[, -c(1:3)]
@@ -63,7 +71,7 @@ mouse_counts <- mouse_counts[, -c(1:3)]
 
 **Make Mouse Metadata Table**  
 Metadata/info table not supplied with this study. Using GEO, manually created (see here *https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE97718*)
-```{r}
+```{r Mouse_Metadata}
 #metadata not included with this dataset.. 
 mouse_info <- read.csv("MouseSraRunTable.txt", header = TRUE, sep = ",")
 Name <- c("CON_pre4","HFD_pre2","HFD_pre3","HFD_pre4","CON_post1","CON_post2","CON_post3","CON_post4","HFD_post4","CON_pre3","CON_pre2","HFD_post2","HFD_post3","HFD_pre1","CON_pre1","HFD_post1")
@@ -76,7 +84,7 @@ mouse_info <- column_to_rownames(mouse_info, var = "Name")
 ```
 
 **Read in Human Data** 
-```{r}
+```{r Human_ReadIn}
 #HUMAN data read in
 human_data <- read.delim("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/human_fixed_raw_counts.txt", header = TRUE, row.names = 1, sep = "\t")
 human_data <- human_data[, -c(1:3)]
@@ -97,7 +105,7 @@ human_info <- column_to_rownames(human_info_test, var = "Names")
 **DESeq2 for Mouse**  
 DESeq2 was used to normalize data  
 
-```{r, message=FALSE}
+```{r Mouse_DESeq2, message=FALSE}
 mouse_dds <- DESeqDataSetFromMatrix(mouse_counts, colData = mouse_info, design = ~ Exercise)
 mouse_dds <- DESeq(mouse_dds)
 #Contrast for log fold change, pre = numerator, post = denominator
@@ -108,7 +116,7 @@ mouse_vsd <- vst(mouse_dds, blind = FALSE)
 ```
 
 
-```{r}
+```{r Mouse_DESeq2_PCA}
 mouse_deseq2_pca <- DESeq2::plotPCA(mouse_vsd, intgroup = "Exercise", )
 mouse_deseq2_pca
 ```
@@ -116,7 +124,7 @@ mouse_deseq2_pca
 **DESeq2 for Human**  
 DESeq2 was used to normalize data  
 
-```{r, message = FALSE}
+```{r Human_DESeq2, message=FALSE}
 #HUMAN normalization
 human_dds <- DESeqDataSetFromMatrix(human_data, colData = human_info, design = ~ PrePost)
 human_dds <- DESeq(human_dds)
@@ -131,7 +139,7 @@ human_de_df <- as.data.frame(human_de)
 human_de_ordered <- human_de_df[order(-human_de_df$LFC), , drop = FALSE]
 ```
 
-```{r, message = FALSE}
+```{r Human_DESeq2_PCA, message = FALSE}
 human_vsd_matrix <- assay(human_vsd)
 human_deseq2_pca <- plotPCA(human_vsd, intgroup = "PrePost")
 human_deseq2_pca
@@ -141,7 +149,7 @@ human_vsd_matrix <- human_vsd_matrix %>% as.data.frame() %>% rownames_to_column(
 ```
 
 **Mouse Gene ID Conversion**  
-```{r}
+```{r Mouse_ID_Conversion}
 #preparing outputs for conversion
 mouse_vsd_matrix <- assay(mouse_vsd)
 rownames(mouse_vsd_matrix) <- sub("\\..*", "", rownames(mouse_vsd_matrix))
@@ -152,7 +160,7 @@ write.csv(mouse_info, file= "New_Mouse_Metadata")
 
 **AnnotationDbi for Mouse Symbols**  
 
-```{r, message=FALSE}
+```{r Mouse_Annotation, message=FALSE}
 #annotation
 library(org.Mm.eg.db)
 #retrieve conversion info from one ID type to another
@@ -177,7 +185,7 @@ mouse_symbol <- mouse_symbol_GO[,c(5:20)]
 
 **AnnotationDbi for Human Symbols**  
 
-```{r}
+```{r Human_Annotation}
 #annotation
 BiocManager::install("org.Hs.eg.db")
 library(org.Hs.eg.db)
@@ -202,7 +210,7 @@ human_symbol_data <- human_symbol_data_GO[,5:62]
 **Convert from mouse to human orthologous symbols**  
 To be able to compare gene expression data from mouse to human, must convert first to orthologous genes
 
-```{r}
+```{r Conversion_Function}
 ## Basic function to convert mouse to human gene names
 convertMouseGeneList <- function(x){
 require("biomaRt")
@@ -215,7 +223,7 @@ return(genesV2)
 ```
 
 
-```{r}
+```{r Mouse_Orthologs}
 #Use convertMouseGeneList to convert to human genes
 mouse_to_human_genes <- convertMouseGeneList(mouse_anno$SYMBOL)
 conv_mouse <- mouse_symbol %>% rownames_to_column(., var = "MGI.symbol") %>% left_join(., mouse_to_human_genes, by = "MGI.symbol")
@@ -235,7 +243,7 @@ conv_mouse <- conv_mouse[,c(2:17)]
 
 **NMF Using CoGAPS for Mouse**  
 How many patterns? Might need to finish FEA to figure out. 
-```{r}
+```{r CoGAPS_Params}
 #MOUSE NMF
 #parameters for GoGAPS
 params <- new("CogapsParams")
@@ -245,7 +253,7 @@ params <- setParam(params, "nPatterns", 9)
 ```
 
 
-```{r}
+```{r Mouse_CoGAPS}
 #CoGAPS to find patterns in the data
 #set parameters for number of patterns
 
@@ -291,7 +299,7 @@ get_chisq(n_patterns, n_iterations)
 ```
 **NMF Using CoGAPS for Human**  
 
-```{r}
+```{r Human_CoGAPS}
 #CoGAPS to find patterns in the data
 AP_human <- CoGAPS(human_symbol_data, params, nIterations = 5000)
 getMeanChiSq(AP_human)
@@ -299,32 +307,14 @@ plot(AP_human)
 ```
 
 Boxplot for Patterns in Mouse
-```{r}
+```{r Mouse_Pattern_Boxplot}
 mouse_samplefactors <- AP_mouse@sampleFactors %>% as.data.frame() 
-#%>% rownames_to_column(., var = "Sample")
 mouse_samplefactors <- cbind(mouse_samplefactors, Exercise = mouse_info$Exercise)
 
-exercisefactors <- as.numeric(factor(mouse_samplefactors$Exercise)) 
-mouse_samplefactors_split <- cbind(mouse_samplefactors, ExerciseFactors = exercisefactors)
-mouse_samplefactors_split <- subset(mouse_samplefactors_split, select = -Exercise)
-#mouse_samplefactors_split <- split(mouse_samplefactors, mouse_samplefactors$ExerciseFactors)
-#mouse_samplefactors <- as.data.frame(mouse_samplefactors)
-
-#Struggling with ggplot
-#mouse_boxplot <- ggplot(mouse_samplefactors, aes(x = Exercise, y = Pattern_2)) + geom_boxplot()
-#mouse_boxplot
-
-baseboxplot <- 
-boxplot(mouse_samplefactors_split, xlab = "NMF Patterns", ylab = "Sample Weights", las = 2, main = "Sample Factors", subset = mouse_samplefactors_split$ExerciseFactors == 2, col = "red")
-boxplot(mouse_samplefactors_split, las = 2, subset = mouse_samplefactors_split$ExerciseFactors == 1, col = "blue", add = TRUE)
-#did not work
-
-#try splitting into two matrices, pre and post, and then use add to "add boxplot to current plot"
-
 #try grouping pre/post exercise into two different matrices, and then combine them into a boxplot
-pre_exercise <- filter(mouse_samplefactors, Exercise == "pre")
+pre_exercise <- dplyr::filter(mouse_samplefactors, Exercise == "pre")
 pre_exercise <- subset(pre_exercise, select = -Exercise)
-post_exercise <- filter(mouse_samplefactors, Exercise == "post")
+post_exercise <- dplyr::filter(mouse_samplefactors, Exercise == "post")
 post_exercise <- subset(post_exercise, select = -Exercise)
 #base r boxplot
 boxplot_factors_post <- boxplot(post_exercise, las = 2, ylab = "Sample Factors", main = "Mouse Post Exercise Patterns", col = "powderblue")
@@ -334,29 +324,29 @@ boxplot_factors_pre <- boxplot(pre_exercise, las = 2, ylab = "Sample Factors", m
 stripchart(pre_exercise, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
 ```
 
-Violin Plots
-```{r}
+Mouse Pattern Violin Plots
+```{r Mouse_PreExercise_Violinplot}
 mouse_long_pre <- pre_exercise %>% gather(key = "Patterns", value = "Val") %>% ggplot( aes(x = Patterns, y = Val, fill = Patterns)) + geom_violin()
 mouse_long_pre
 ```
 
 
-```{r}
+```{r Mouse_PostExercise_Violinplot}
 mouse_long_post <- post_exercise %>% gather(key = "Patterns", value = "Val") %>% ggplot( aes(x = Patterns, y = Val, fill = Patterns)) + geom_violin()
 mouse_long_post
 ```
 
 
 
-```{r}
+```{r Mouse_Geneweight_Boxplot}
 mouse_featureLoadings <- AP_mouse@featureLoadings %>% as.data.frame() 
 boxplot_loadings <- boxplot(mouse_featureLoadings, xlab = "NMF Patterns", ylab = "Amplitude", las = 2, main = "Mouse Feature Loadings")
 
 
 ```
 
- Boxplot for Patterns in Human
-```{r}
+Base R Boxplot for Patterns in Human
+```{r Basic_Human_Patterns_Boxplot}
 human_samplefactors <- AP_human@sampleFactors %>% as.data.frame() 
 #%>% rownames_to_column(., var = "Sample")
 human_samplefactors <- cbind(human_samplefactors, Exercise = human_info$PrePost)
@@ -374,8 +364,8 @@ boxplot_factors_pre_human <- boxplot(pre_exercise_human, las = 2, ylab = "Sample
 stripchart(pre_exercise_human, vertical = TRUE, method = "jitter", add = TRUE, pch = 20, col = 'black')
 ```
  
-ggplot Boxplot for Patterns in Human
-```{r}
+ggPlot Boxplot for Patterns in Human
+```{r Human_Patterns_ggPlot}
 human_sampleFactors <- AP_human@sampleFactors
 
 human_sampleFactors_long <- human_sampleFactors %>% as.data.frame() %>% rownames_to_column(., var = "Sample") %>% pivot_longer( cols = -Sample, names_to = "Patterns", values_to = "Factors")  %>% mutate(Exercise = ifelse(grepl("Pre", Sample, ignore.case = TRUE), "Pre", "Post")) %>% unite( col = "Exercise_Pattern", Patterns, Exercise, sep = "_", remove = FALSE)
@@ -391,29 +381,23 @@ human_NMF_boxplot <- ggplot(human_sampleFactors_long, aes(x = Exercise_Pattern, 
 human_NMF_boxplot
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210621_human_NMF_prepost_pattern_boxplot.pdf", human_NMF_boxplot)
 
 ```
 
  
-**Heatmap of Mouse NMF**  
-Visualizing NMF object
+Mouse NMF Heatmap  
+Heatmap set up the same as ProjectR vignette, using hierachical clustering
 ```{r}
-#heatmap
-#Error in plot.new() : figure margins too large
-#trying par(mar) to change margins
-
 NMF_mouse <-heatmap.2(as.matrix(AP_mouse),col=viridis(100), trace='none',
                  distfun=function(c) as.dist(1-cor(t(c))) ,
-                 cexCol=1,cexRow=.6,scale = "row", main = "Mouse Data: nPatterns 14, nIterations 5000", labRow = rownames(conv_mouse), xlab = "Patterns",
+                 cexCol=1,cexRow=.6,scale = "row", main = "Mouse NMF", labRow = rownames(conv_mouse), xlab = "Patterns",
                  hclustfun=function(x) hclust(x, method="average"))
+```
 
-#pdf("NewMouse_NMF_nPat14_nIt5000.pdf", NMF_mouse)
-NMF_mouse
-
-#NEW TRY
-##ggplot Heatmap
+Mouse NMF ggPlot Heatmap - Data Wrangling
+```{r}
 mouse_featloadings <- AP_mouse@featureLoadings
 
 #estimate variance for each row 
@@ -422,6 +406,8 @@ var_mouse_featloadings <- apply(mouse_featloadings, 1, var)
 top100_var_mouse_featloadings_names <- names(sort(var_mouse_featloadings, decreasing = TRUE))[1:100]
 head(top100_var_mouse_featloadings_names)
 ```
+
+Mouse - Highest feature/gene weight averages
 ```{r}
 #to look at the highest weighted genes, going to select genes with highest averages across patterns
 avg_mouse_featloadings <- apply(mouse_featloadings, 1, mean)
@@ -430,7 +416,7 @@ top75_mouse_featloadings_names <- names(sort(avg_mouse_featloadings, decreasing 
 head(top75_mouse_featloadings_names)
 ```
 
-
+Mouse data wrangling
 ```{r}
 #data wrangling
 top75_mouse_featloadings <- mouse_featloadings[top75_mouse_featloadings_names,]
@@ -439,6 +425,7 @@ top75_mouse_featloadings <- rownames_to_column(top75_mouse_featloadings, var = "
 dim(top75_mouse_featloadings)
 head(top75_mouse_featloadings)
 ```
+
 Mouse Heatmap  
 https://jcoliver.github.io/learn-r/009-expression-heatmaps.html
 ```{r}
@@ -447,12 +434,13 @@ mouse_featloadings_long <- pivot_longer(data = top75_mouse_featloadings,
                          names_to = "pattern", 
                          values_to = "feat_weight")
 head(mouse_featloadings_long)
-mouse_featloadings_long$log.expression <- log(mouse_featloadings_long$feat_weight)
+mouse_featloadings_long$log.weight <- log(mouse_featloadings_long$feat_weight)
 ```
 
-Mouse Gene/Feature NMF Matrix Heatmap in ggplot
+**Mouse NMF Amplitude Matrix Heatmap in ggplot**  
+Heatmap visualization of Amplitude/features/gene weight matrix (CoGAPS output)
 ```{r}
-mouse_featloadings_heatmap <- ggplot(mouse_featloadings_long, mapping = aes(x = pattern, y = genes, fill = log.expression)) + geom_tile() + xlab(label = "Patterns") + ylab(label = "Genes") + theme(axis.text.x = element_text(angle = 45, vjust = 0.5))
+mouse_featloadings_heatmap <- ggplot(mouse_featloadings_long, mapping = aes(x = pattern, y = genes, fill = log.weight)) + geom_tile() + xlab(label = "Patterns") + ylab(label = "Genes") + theme(axis.text.x = element_text(angle = 45, vjust = 0.5))
 mouse_featloadings_heatmap
 ```
 
@@ -473,7 +461,8 @@ plotPatternMarkers(AP_mouse, as.matrix(conv_mouse), patternPalette = "PiYG", sam
 
 ```
 
-**Human NMF Heatmap**
+**Human NMF Heatmap**  
+Heatmap visualization of Amplitude/features/gene weight matrix (CoGAPS output)
 ```{r}
 ##ggplot Heatmap
 human_featloadings <- AP_human@featureLoadings
@@ -484,6 +473,8 @@ var_human_featloadings <- apply(human_featloadings, 1, var)
 top100_var_human_featloadings_names <- names(sort(var_human_featloadings, decreasing = TRUE))[1:100]
 head(top100_var_human_featloadings_names)
 ```
+
+Human - highest average weighted genes
 ```{r}
 #to look at the highest weighted genes, going to select genes with highest averages across patterns
 avg_human_featloadings <- apply(human_featloadings, 1, mean)
@@ -492,7 +483,7 @@ top75_human_featloadings_names <- names(sort(avg_human_featloadings, decreasing 
 head(top75_human_featloadings_names)
 ```
 
-Human
+Human - data wrangling
 ```{r}
 #data wrangling
 top75_human_featloadings <- human_featloadings[top75_human_featloadings_names,]
@@ -524,7 +515,7 @@ human_featloadings_heatmap <- ggplot(human_featloadings_long, mapping = aes(x = 
 human_featloadings_heatmap
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggsave("210621_NMF_human_featloadings_heatmap.pdf", human_featloadings_heatmap)
 ```
 
@@ -537,7 +528,7 @@ human_NMF <- projectR(human_data,loadings=AP_mouse, full=TRUE,
                      dataNames=rownames(human_data))
 
 #Using metadata and NMF projection to make a dataframe that can be plotted
-#human_meta <- column_to_rownames(human_info, var = "SRR")
+human_meta <- column_to_rownames(human_info_test, var = "SRR")
 #dNMF <- human_NMF %>% data.frame() %>% t() %>% cbind(., )
 projection_NMF <- human_NMF$projection %>% t() %>% cbind(., human_info)
 pval_NMF <- human_NMF$pval
@@ -575,6 +566,7 @@ projection_NMF_boxplot <- ggplot(NMF_projection_long, aes(x = Exercise_Pattern, 
 projection_NMF_boxplot
 ```
 
+Scatterplot to Compare Pre/Post Projected Patterns
 ```{r}
 projection_NMF_scatterplot <- ggplot(NMF_projection_long, aes(x = Patterns, y = Factors)) +
   geom_point(aes(color = PrePost)) +
@@ -615,6 +607,9 @@ PCA_projectr_df <- cbind(PCA_projectr_t, human_meta)
 dPCA <- data.frame(cbind(t(PCA_projectr[[1]]),PCA_projectr_df))
 projected_PCA <- ggplot(PCA_projectr_df, aes(x = PC1, y = PC2, colour = PrePost)) + geom_point() +  ggtitle("Mouse Principal Components Projected onto Human Data")
 projected_PCA
+```
+
+```{r eval=FALSE, include=FALSE}
 ggsave("PCA_Method_Mouse_Projected_onto_Human.pdf", projected_PCA)
 ```
 
@@ -624,7 +619,6 @@ ggsave("PCA_Method_Mouse_Projected_onto_Human.pdf", projected_PCA)
 There’s 2 methods: cluster2pattern finds correlation of each gene’s expression by mean of cluster to define continuous weights. Then intersector tests significant overlap between 2 clustering objects. For these purposes, I think cluster2pattern is better for finding what we want (differences between clusters rather than overlaps). Requires a clustering object first.
 ```{r, message = FALSE}
 #TOP 50 DIFFERENTIALLY EXPRESSED GENES
-#error "the standard deviation is zero" for cluster2pattern
 #checking standard deviation for each gene
 stdevs <- apply(conv_mouse, 1, sd)
 mouse_stdev <- cbind(conv_mouse, stdevs)
@@ -642,8 +636,6 @@ library(fpc)
 #  Hierarchical Clustering
 mouse_dist <- dist(mouse_top250, method = "euclidean") # distance matrix 
 hclust_fit <- hclust(mouse_dist, method="average")
-plot(hclust_fit) # display dendrogram
-#looks like 3 clusters would be best 
 ```
 
 ```{r}
@@ -651,16 +643,14 @@ plot(hclust_fit) # display dendrogram
 library(pvclust)
 #pvclust() provides p-values for hierarchical clustering based on multiscale bootstrap resampling-clusters that are highly supported by the data will have large p values.
 #pvclust clusters columns, not rows: transpose your data before using
-fit <- pvclust(mouse_top50, method.hclust="average",
+fit <- pvclust(mouse_top250, method.hclust="average",
    method.dist="euclidean")
 hclust_dendro_sig <- plot(fit) 
 pvrect(fit, alpha=.90) # add rectangles around groups highly supported by the data
+```
 
-
+```{r eval=FALSE, include=FALSE}
 pdf(file = "Mouse_Hclust_Dendrogram.pdf", hclust_dendro_sig)
-
-#clusterplotR... what is this/how to use this/should I use this?
-#mouse_clusterplotr <- clusterPlotR(mouse_top50, hclust_fit, NC = 3)
 ```
 
 
@@ -691,29 +681,17 @@ human_hclust_dendro_sig <- plot(fit_human)
 
 Output of the cluster2pattern function is a pclust class object; specifically, a matrix of
 genes (rows) by clusters (columns). A gene’s value outside of its assigned cluster is zero. For
-the cluster containing a given gene, the gene’s value is the corelation of the gene’s expression
+the cluster containing a given gene, the gene’s value is the correlation of the gene’s expression
 to the mean of that cluster.
 ```{r}
-
-#output of the cluster2pattern function is a pclust class object; specifically, a matrix of
-#genes (rows) by clusters (columns). A gene’s value outside of its assigned cluster is zero. For
-#the cluster containing a given gene, the gene’s value is the corelation of the gene’s expression
-#to the mean of that cluster.
 mouse_clusters <- cluster2pattern(hclust_fit, NP = 2, Data = mouse_top250)
 
-cluster_plot <- ggplot(as.data.frame(mouse_clusters), aes(x = V1, y = V2, label = rownames(mouse_clusters))) + geom_point() + ggtitle("Mouse Clusters") + geom_text_repel()
-cluster_plot
-
-#join these genes to their GO terms? 
-#mouse_clusters_GO <- left_join()
-#mouse_clusterplot <- clusterPlotR(cdata = mouse_top50, cls = hclust_fit, NC = 1, mouse_info$Exercise)
-#Error in matrix(ncol = dim(cData)[2], nrow = length(cls1)) : non-numeric matrix extent
 ```
 
 Projecting mouse clusters onto human data
 ```{r}
 #need to use the top 50 genes from mouse DE to pull those genes from human and then project cluster object from cluster2pattern onto human data 
-top50_list <- rownames_to_column(mouse_top50, var = "SYMBOL")
+top50_list <- rownames_to_column(mouse_top250, var = "SYMBOL")
 human_list <- rownames_to_column(human_symbol_data_GO, var = "SYMBOL")
 top50_list <- semi_join(human_list, top50_list, by = "SYMBOL")
 mouseToHumanTop50 <- column_to_rownames(top50_list, var = "SYMBOL")
@@ -761,7 +739,7 @@ mouse_symbol_de <- mouse_symbol_GO_de[,c(5,6)]
 **Functional Enrichment Analysis**  
 
 Mouse ggprofiler https://biit.cs.ut.ee/gprofiler/page/r
-```{r}
+```{r eval=FALSE, include=FALSE}
 #input needs to be a dataframe with genes and p values, so each pattern will need its own dataframe
 #sample_factors has already been extracted from AP_human, need to do the same with the stdev
 mouse_feature <- as.data.frame(AP_mouse@featureLoadings)
@@ -769,7 +747,7 @@ mouse_feature_stdev <- as.data.frame(AP_mouse@loadingStdDev)
 pattern3_mouse <- dplyr::select(mouse_feature, Pattern_3) %>% cbind(., StdDev = mouse_feature_stdev$Pattern_3)
 head(pattern3_mouse)
 pattern1_mouse <- dplyr::select(mouse_feature, Pattern_1) %>% cbind(., StdDev = mouse_feature_stdev$Pattern_1)
-head(pattern2_mouse)
+head(pattern1_mouse)
 
 #FILTERING BY STD DEV... Should I have done this? Try without filtering?
 #want to look at just the significant genes of pattern 5
@@ -787,9 +765,9 @@ names(pattern1_mouse_names) <- rownames(pattern1_sig_mouse)
 ```
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 #look into exclude_iea and correction_methods
-gost_res_mouse <- gost(query = pattern6_mouse_names, organism = "hsapiens", ordered_query = FALSE, significant = TRUE, exclude_iea = FALSE, measure_underrepresentation = FALSE, evcodes = FALSE, 
+gost_res_mouse <- gost(query = pattern3_mouse_names, organism = "hsapiens", ordered_query = FALSE, significant = TRUE, exclude_iea = FALSE, measure_underrepresentation = FALSE, evcodes = FALSE, 
                 user_threshold = 0.05, correction_method = "g_SCS", 
                 domain_scope = "annotated", custom_bg = NULL, 
                 numeric_ns = "", sources = c("REAC", "KEGG", "CORUM"), as_short_link = FALSE)
@@ -798,18 +776,18 @@ gost_res_mouse$result
 
 #results for each pattern was saved
 #mouse_pattern5_rkc <- gost_res_mouse$result
-mouse_pattern6_GO <- gost_res_mouse$result
+mouse_pattern3_GO <- gost_res_mouse$result
 
 gost_mouse_pattern3_top150gene_fea <- gost_res_mouse$result
 #conversion to make this dataframe writable for csv
-gost_mouse_pattern6_top150gene_fea <- apply(gost_mouse_pattern6_top150gene_fea,2,as.character)
-write.csv2(gost_mouse_pattern6_top150gene_fea, file =  "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/gost_mouse_pattern6_top150gene_fea.csv")
+gost_mouse_pattern3_top150gene_fea <- apply(gost_mouse_pattern3_top150gene_fea,2,as.character)
+write.csv2(gost_mouse_pattern3_top150gene_fea, file =  "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/gost_mouse_pattern6_top150gene_fea.csv")
 
 
 ```
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 #top GO terms 
 gost_mouse_publish <- publish_gostplot(gost_plot_mouse, highlight_terms = c("GO:0005737", "GO:0005515", "GO:0071840"), filename = "/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210614_gost_mouse_publishplot.pdf" ) 
 
@@ -817,7 +795,7 @@ gost_mouse_publish
 ```
 
 Human ggprofiler https://biit.cs.ut.ee/gprofiler/page/r
-```{r}
+```{r eval=FALSE, include=FALSE}
 #input needs to be a dataframe with genes and p values, so each pattern will need its own dataframe
 #sample_factors has already been extracted from AP_human, need to do the same with the stdev
 human_feature <- as.data.frame(AP_human@featureLoadings)
@@ -836,7 +814,7 @@ names(pattern5_human_names) <- rownames(pattern5_sig)
 ```
 
 Human gprofiler Run
-```{r}
+```{r eval=FALSE, include=FALSE}
 #look into exclude_iea and correction_methods
 gost_res <- gost(query = rownames(pattern3_), organism = "hsapiens", ordered_query = FALSE, significant = TRUE, exclude_iea = FALSE, measure_underrepresentation = FALSE, evcodes = FALSE, 
                 user_threshold = 0.05, correction_method = "g_SCS", 
@@ -853,7 +831,7 @@ gost_plot2
 
 Alluvial Plot - Mouse  
 Looking at all gost results and just KEGG/Reactome/Corum
-```{r}
+```{r eval=FALSE, include=FALSE}
 #combine pattern FEA data frames
 #need to add an identifier for pattern number for each dataframe
 gost_mouse_pattern4_top150gene_fea <- cbind(gost_mouse_pattern4_top150gene_fea, c(rep("pattern_4")))
@@ -882,15 +860,15 @@ mouse_rkc_3thru6 <- rbind(mouse_pattern3_rkc, mouse_pattern4_rkc, mouse_pattern5
 ```
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210616_gprofiler_mouse_patterns3thru6_FEA_sources_alluvial.pdf", ggalluvial)
 
 ```
 
 Alluvial Plot - Mouse  
 Looking just at gost profiler KEGG results
-```{r}
-mouse_KEGG_3thru6 <- filter(mouse_rkc_3thru6, source == "KEGG")
+```{r eval=FALSE, include=FALSE}
+mouse_KEGG_3thru6 <- dplyr::filter(mouse_rkc_3thru6, source == "KEGG")
 
 ggalluvial_KEGG <- ggplot(mouse_KEGG_3thru6,
        aes(axis1 = pattern, axis2 = term_name, y = query_size)) +
@@ -915,13 +893,13 @@ ggalluvial_KEGG
 
 ```
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210617_gprofiler_mouse_patterns3thru6_KEGG_alluvial.pdf", ggalluvial_KEGG)
 ```
 
 Alluvial Plot - Mouse  
 Looking just at gost profiler GO results
-```{r}
+```{r eval=FALSE, include=FALSE}
 #combining gost results for patterns 3:6 with just GO sources
 mouse_pattern3_GO <- cbind(mouse_pattern3_GO, pattern = c(rep("pattern_3")))
 mouse_pattern4_GO <- cbind(mouse_pattern4_GO, pattern = c(rep("pattern_4")))
@@ -942,7 +920,7 @@ ggalluvial_GO
 ```
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ggsave("/Users/eramsey/Desktop/R21_210302/PreliminaryR21/210616_gprofiler_mouse_patterns3thru6_FEA_GOsources_alluvial.pdf", ggalluvial_GO)
 
 ```
